--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -128,12 +128,13 @@ SplineTangentScale=0.500000
 LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 MaterialForDroppedTextures=None
 MaterialParamsForDroppedTextures=()
-EditorViews=(("/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap", (LevelViewportsInfo=((CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=74.519095,Y=-186.497071,Z=318.574628),CamRotation=(Pitch=-35.697400,Yaw=1491.860177,Roll=0.000004)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap", (LevelViewportsInfo=((CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=39.331596,Y=56.438354,Z=104.521103),CamOrthoZoom=250.000000),(CamPosition=(X=86.044435,Y=-46.763393,Z=289.009190),CamRotation=(Pitch=-8.735098,Yaw=3044.240180,Roll=0.000004)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 
 [MRU]
 MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -143,6 +144,12 @@ LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -163,12 +170,12 @@ ContentBrowserDrawer.CollectionAreaExpanded=False
 ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
-ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
-ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.12843354
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.771567285
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Materials/Colors
+ContentBrowserDrawer.SelectedPaths=/Game/Materials/Robert
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -176,11 +183,13 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Colors
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Robert
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Robort
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Colors
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Images
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Blueprints/Assets
@@ -197,16 +206,21 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Textures
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Robert
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.JumpMRU=/All/Game/Materials/Robert
+ContentBrowserTab1.JumpMRU=/All/Game/Materials/Robort
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Textures
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Robert/3D_Robert_Sphere.3D_Robert_Sphere;
+RecentlyPlaced=/Game/Materials/Robert/3D_Robert_Cube.3D_Robert_Cube;
+RecentlyPlaced=/Game/Materials/Robort/3D_Robert_Cube.3D_Robert_Cube;
 RecentlyPlaced=/Game/Materials/Colors/333f48.333f48;
 RecentlyPlaced=/Game/Materials/Colors/64a70b.64a70b;
 RecentlyPlaced=/Game/Materials/Colors/004b87.004b87;
@@ -219,14 +233,20 @@ RecentlyPlaced=/Game/Materials/Images/Kanchan200603165.Kanchan200603165;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/Colors/Orange
-MRUItem1=/Game/Materials/Colors/f3d03e
-MRUItem2=/Game/Materials/Colors/77c5d5
-MRUItem3=/Game/Materials/Colors/c4bfb6
-MRUItem4=/Game/Materials/Colors/333f48
-MRUItem5=/Game/Materials/Colors/64a70b
-MRUItem6=/Game/Materials/Colors/004b87
-MRUItem7=/Game/StarterContent/Textures/Text
+MRUItem0=/Game/Materials/Robert/Material_003
+MRUItem1=/Game/Materials/Robert/3D_Robert_Sphere
+MRUItem2=/Game/Materials/Robert/Material_001
+MRUItem3=/Game/Materials/Robert/3D_Robert_Cube
+MRUItem4=/Game/Materials/Robert/Material
+MRUItem5=/Game/Materials/Robert/RobertBlue
+MRUItem6=/Game/Materials/Colors/Orange
+MRUItem7=/Game/Materials/Colors/f3d03e
+MRUItem8=/Game/Materials/Colors/77c5d5
+MRUItem9=/Game/Materials/Colors/c4bfb6
+MRUItem10=/Game/Materials/Colors/333f48
+MRUItem11=/Game/Materials/Colors/64a70b
+MRUItem12=/Game/Materials/Colors/004b87
+MRUItem13=/Game/StarterContent/Textures/Text
 
 [DetailCategories]
 Text_C.Tick=True
@@ -288,6 +308,26 @@ PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -355,6 +395,13 @@ Object=
 /Game/Materials/Colors/e57200.e57200=1
 /Game/Materials/Colors/77c5d5.77c5d5=1
 /Game/Materials/Colors/Orange.Orange=1
+/Game/Materials/Robert/3D_Robert_Cube.3D_Robert_Cube=1
+/Game/Materials/Robert/RobertBlue.RobertBlue=1
+/Game/Materials/Robert/Material.Material=1
+/Game/Materials/Robert/Material_001.Material_001=1
+/Game/Materials/Robert/Material_002.Material_002=1
+/Game/Materials/Robert/3D_Robert_Sphere.3D_Robert_Sphere=1
+/Game/Materials/Robert/Material_003.Material_003=1
 
 [MaterialEditor]
 PrimType=1
@@ -520,4 +567,125 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildReversedIndexBuffer=True
+bBuildNanite=False
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+DistanceFieldResolutionScale=1.000000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=0.500000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bKeepSectionsSeparate=False
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bImportVertexAttributes=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bSnapToClosestFrameBoundary=False
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+bAddCurveMetadataToSkeleton=True
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=FBXImport
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=False
 
