--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -40,6 +40,7 @@ r.AntiAliasingMethod=3
 bBuildForES31=False
 ExtraApplicationSettings=<meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|questpro|quest3" />
 bPackageForMetaQuest=True
+bPackageDataInsideApk=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_Default
